// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown component Custom sanitizer options: allowedAttributes can be overridden 1`] = `"<input disabled type=\\"checkbox\\">"`;

exports[`Markdown component Custom sanitizer options: allowedTags can be overridden 1`] = `
"Foobar
<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">Some text</p>"
`;

exports[`Markdown component should decorate the text matching the condition 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  opacity: 1;
  display: inline-block;
}

.c3:active,
.c3:hover {
  color: hsl(196.29999999999995,100%,37.5%);
}

.c4 {
  color: #00AEEF;
}

.c2 * {
  box-sizing: border-box;
}

.c2 code {
  background-color: #f4f4f4;
  padding: 0.2em 0px;
  margin: 0px;
  border-radius: 3px;
  line-height: 1.2;
}

.c2 pre {
  background-color: #f4f4f4;
}

.c2 pre > code {
  display: block;
  background: none;
  overflow-y: auto;
}

.c2 code,
.c2 kbd,
.c2 pre {
  font-family: 'Ubuntu Mono','Courier New',monospace;
}

.c2 kbd {
  display: inline-block;
  padding: 3px 5px;
  font-size: 11px;
  line-height: 10px;
  color: #2A506F;
  vertical-align: middle;
  background-color: rgba(244,244,244,0.7);
  border: solid 1px #c6c8c9;
  border-bottom-color: hsl(200,2.7%,70.4%);
  border-radius: 3px;
  box-shadow: inset 0 -1px 0 hsl(200,2.7%,70.4%);
}

.c2 dl {
  padding: 0;
}

.c2 dl dt {
  padding: 0;
  margin-top: 16px;
  font-size: 1em;
  font-style: italic;
  font-weight: 600;
}

.c2 dl dd {
  padding: 0 16px;
  margin-bottom: 16px;
}

.c2 td,
.c2 th {
  padding: 0;
}

.c2 table {
  border-spacing: 0;
  border-collapse: collapse;
  display: block;
  width: 100%;
  overflow: auto;
}

.c2 table th {
  font-weight: 600;
}

.c2 table th,
.c2 table td {
  padding: 6px 13px;
  border: 1px solid #c6c8c9;
}

.c2 table tr {
  background-color: #fff;
  border-top: 1px solid #f4f4f4;
}

.c2 table tr:nth-child(2n) {
  background-color: #f4f4f4;
}

.c2 blockquote {
  margin: 0;
}

.c2 blockquote,
.c2 dl,
.c2 table {
  margin-top: 0;
  margin-bottom: 16px;
}

.c2 blockquote {
  padding: 0 1em;
  color: #2A506F;
  border-left: 0.25em solid #c6c8c9;
}

.c2 blockquote > :first-child {
  margin-top: 0;
}

.c2 blockquote > :last-child {
  margin-bottom: 0;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div>
      <p
        className=""
      >
        <span>
          
          <span
            style={
              Object {
                "color": "green",
              }
            }
          >
            @good
          </span>
           foo @bad@bad 
        </span>
        <a
          className="c3 c4"
          color="primary.main"
          href="https://github.com"
        >
          <span>
            
            <span
              style={
                Object {
                  "color": "green",
                }
              }
            >
              @good
            </span>
          </span>
        </a>
         bar@bad baz qux. 
        <code>
          Is @bad inside code
        </code>
        <span>
           
          <span
            style={
              Object {
                "color": "green",
              }
            }
          >
            @good
          </span>
           @good
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Markdown component should drop the content of style elements tag 1`] = `".foo { color: blue; }"`;

exports[`Markdown component should drop the content of textarea elements tag 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">foobar</p>"`;

exports[`Markdown component should match the stored snapshot 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 * {
  box-sizing: border-box;
}

.c2 code {
  background-color: #f4f4f4;
  padding: 0.2em 0px;
  margin: 0px;
  border-radius: 3px;
  line-height: 1.2;
}

.c2 pre {
  background-color: #f4f4f4;
}

.c2 pre > code {
  display: block;
  background: none;
  overflow-y: auto;
}

.c2 code,
.c2 kbd,
.c2 pre {
  font-family: 'Ubuntu Mono','Courier New',monospace;
}

.c2 kbd {
  display: inline-block;
  padding: 3px 5px;
  font-size: 11px;
  line-height: 10px;
  color: #2A506F;
  vertical-align: middle;
  background-color: rgba(244,244,244,0.7);
  border: solid 1px #c6c8c9;
  border-bottom-color: hsl(200,2.7%,70.4%);
  border-radius: 3px;
  box-shadow: inset 0 -1px 0 hsl(200,2.7%,70.4%);
}

.c2 dl {
  padding: 0;
}

.c2 dl dt {
  padding: 0;
  margin-top: 16px;
  font-size: 1em;
  font-style: italic;
  font-weight: 600;
}

.c2 dl dd {
  padding: 0 16px;
  margin-bottom: 16px;
}

.c2 td,
.c2 th {
  padding: 0;
}

.c2 table {
  border-spacing: 0;
  border-collapse: collapse;
  display: block;
  width: 100%;
  overflow: auto;
}

.c2 table th {
  font-weight: 600;
}

.c2 table th,
.c2 table td {
  padding: 6px 13px;
  border: 1px solid #c6c8c9;
}

.c2 table tr {
  background-color: #fff;
  border-top: 1px solid #f4f4f4;
}

.c2 table tr:nth-child(2n) {
  background-color: #f4f4f4;
}

.c2 blockquote {
  margin: 0;
}

.c2 blockquote,
.c2 dl,
.c2 table {
  margin-top: 0;
  margin-bottom: 16px;
}

.c2 blockquote {
  padding: 0 1em;
  color: #2A506F;
  border-left: 0.25em solid #c6c8c9;
}

.c2 blockquote > :first-child {
  margin-top: 0;
}

.c2 blockquote > :last-child {
  margin-bottom: 0;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div>
      <p
        className=""
      >
        Hello world
      </p>
    </div>
  </div>
</div>
`;

exports[`Markdown component should not highlight code when disabled 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  font-weight: normal;
}

.c4 {
  margin: 0;
  font-size: 34px;
}

.c2 * {
  box-sizing: border-box;
}

.c2 code {
  background-color: #f4f4f4;
  padding: 0.2em 0px;
  margin: 0px;
  border-radius: 3px;
  line-height: 1.2;
}

.c2 pre {
  background-color: #f4f4f4;
}

.c2 pre > code {
  display: block;
  background: none;
  overflow-y: auto;
}

.c2 code,
.c2 kbd,
.c2 pre {
  font-family: 'Ubuntu Mono','Courier New',monospace;
}

.c2 kbd {
  display: inline-block;
  padding: 3px 5px;
  font-size: 11px;
  line-height: 10px;
  color: #2A506F;
  vertical-align: middle;
  background-color: rgba(244,244,244,0.7);
  border: solid 1px #c6c8c9;
  border-bottom-color: hsl(200,2.7%,70.4%);
  border-radius: 3px;
  box-shadow: inset 0 -1px 0 hsl(200,2.7%,70.4%);
}

.c2 dl {
  padding: 0;
}

.c2 dl dt {
  padding: 0;
  margin-top: 16px;
  font-size: 1em;
  font-style: italic;
  font-weight: 600;
}

.c2 dl dd {
  padding: 0 16px;
  margin-bottom: 16px;
}

.c2 td,
.c2 th {
  padding: 0;
}

.c2 table {
  border-spacing: 0;
  border-collapse: collapse;
  display: block;
  width: 100%;
  overflow: auto;
}

.c2 table th {
  font-weight: 600;
}

.c2 table th,
.c2 table td {
  padding: 6px 13px;
  border: 1px solid #c6c8c9;
}

.c2 table tr {
  background-color: #fff;
  border-top: 1px solid #f4f4f4;
}

.c2 table tr:nth-child(2n) {
  background-color: #f4f4f4;
}

.c2 blockquote {
  margin: 0;
}

.c2 blockquote,
.c2 dl,
.c2 table {
  margin-top: 0;
  margin-bottom: 16px;
}

.c2 blockquote {
  padding: 0 1em;
  color: #2A506F;
  border-left: 0.25em solid #c6c8c9;
}

.c2 blockquote > :first-child {
  margin-top: 0;
}

.c2 blockquote > :last-child {
  margin-bottom: 0;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div>
      <h2
        className="c3 c4"
      >
        Code blocks
      </h2>
      

      <pre>
        <code>
          // This is plaintext
const foo = () =&gt; {
  return 'bar'
}

        </code>
      </pre>
      

      <pre>
        <code
          className="language-javascript"
        >
          // This is javascript
const foo = () =&gt; {
  return 'bar'
}

        </code>
      </pre>
    </div>
  </div>
</div>
`;

exports[`Markdown component should not render raw html when disabled 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  font-weight: normal;
}

.c4 {
  margin: 0;
  font-size: 34px;
}

.c2 * {
  box-sizing: border-box;
}

.c2 code {
  background-color: #f4f4f4;
  padding: 0.2em 0px;
  margin: 0px;
  border-radius: 3px;
  line-height: 1.2;
}

.c2 pre {
  background-color: #f4f4f4;
}

.c2 pre > code {
  display: block;
  background: none;
  overflow-y: auto;
}

.c2 code,
.c2 kbd,
.c2 pre {
  font-family: 'Ubuntu Mono','Courier New',monospace;
}

.c2 kbd {
  display: inline-block;
  padding: 3px 5px;
  font-size: 11px;
  line-height: 10px;
  color: #2A506F;
  vertical-align: middle;
  background-color: rgba(244,244,244,0.7);
  border: solid 1px #c6c8c9;
  border-bottom-color: hsl(200,2.7%,70.4%);
  border-radius: 3px;
  box-shadow: inset 0 -1px 0 hsl(200,2.7%,70.4%);
}

.c2 dl {
  padding: 0;
}

.c2 dl dt {
  padding: 0;
  margin-top: 16px;
  font-size: 1em;
  font-style: italic;
  font-weight: 600;
}

.c2 dl dd {
  padding: 0 16px;
  margin-bottom: 16px;
}

.c2 td,
.c2 th {
  padding: 0;
}

.c2 table {
  border-spacing: 0;
  border-collapse: collapse;
  display: block;
  width: 100%;
  overflow: auto;
}

.c2 table th {
  font-weight: 600;
}

.c2 table th,
.c2 table td {
  padding: 6px 13px;
  border: 1px solid #c6c8c9;
}

.c2 table tr {
  background-color: #fff;
  border-top: 1px solid #f4f4f4;
}

.c2 table tr:nth-child(2n) {
  background-color: #f4f4f4;
}

.c2 blockquote {
  margin: 0;
}

.c2 blockquote,
.c2 dl,
.c2 table {
  margin-top: 0;
  margin-bottom: 16px;
}

.c2 blockquote {
  padding: 0 1em;
  color: #2A506F;
  border-left: 0.25em solid #c6c8c9;
}

.c2 blockquote > :first-child {
  margin-top: 0;
}

.c2 blockquote > :last-child {
  margin-bottom: 0;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div>
      <h2
        className="c3 c4"
      >
        Inline HTML
      </h2>
      

      <p
        className=""
      >
        An image:
        

        

        

        

        A link:
        

        http://github.com/
      </p>
      

      <h2
        className="c3 c4"
      >
        Keyboard keys
      </h2>
      

      <p
        className=""
      >
        cmd
         + 
        alt
         + 
        shift
         + 
        a
      </p>
    </div>
  </div>
</div>
`;

exports[`Markdown component should not sanitize html when disabled 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 * {
  box-sizing: border-box;
}

.c2 code {
  background-color: #f4f4f4;
  padding: 0.2em 0px;
  margin: 0px;
  border-radius: 3px;
  line-height: 1.2;
}

.c2 pre {
  background-color: #f4f4f4;
}

.c2 pre > code {
  display: block;
  background: none;
  overflow-y: auto;
}

.c2 code,
.c2 kbd,
.c2 pre {
  font-family: 'Ubuntu Mono','Courier New',monospace;
}

.c2 kbd {
  display: inline-block;
  padding: 3px 5px;
  font-size: 11px;
  line-height: 10px;
  color: #2A506F;
  vertical-align: middle;
  background-color: rgba(244,244,244,0.7);
  border: solid 1px #c6c8c9;
  border-bottom-color: hsl(200,2.7%,70.4%);
  border-radius: 3px;
  box-shadow: inset 0 -1px 0 hsl(200,2.7%,70.4%);
}

.c2 dl {
  padding: 0;
}

.c2 dl dt {
  padding: 0;
  margin-top: 16px;
  font-size: 1em;
  font-style: italic;
  font-weight: 600;
}

.c2 dl dd {
  padding: 0 16px;
  margin-bottom: 16px;
}

.c2 td,
.c2 th {
  padding: 0;
}

.c2 table {
  border-spacing: 0;
  border-collapse: collapse;
  display: block;
  width: 100%;
  overflow: auto;
}

.c2 table th {
  font-weight: 600;
}

.c2 table th,
.c2 table td {
  padding: 6px 13px;
  border: 1px solid #c6c8c9;
}

.c2 table tr {
  background-color: #fff;
  border-top: 1px solid #f4f4f4;
}

.c2 table tr:nth-child(2n) {
  background-color: #f4f4f4;
}

.c2 blockquote {
  margin: 0;
}

.c2 blockquote,
.c2 dl,
.c2 table {
  margin-top: 0;
  margin-bottom: 16px;
}

.c2 blockquote {
  padding: 0 1em;
  color: #2A506F;
  border-left: 0.25em solid #c6c8c9;
}

.c2 blockquote > :first-child {
  margin-top: 0;
}

.c2 blockquote > :last-child {
  margin-bottom: 0;
}

.c1 {
  font-family: 'Source Sans Pro',Helvetica,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div>
      <img
        onError="alert(123)"
        src="x"
      />
    </div>
  </div>
</div>
`;

exports[`Markdown component should render html images 1`] = `"<img src=\\"https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png\\">"`;

exports[`Markdown component should render html links 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a href=\\"https://github.com\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">GitHub</a></p>"`;

exports[`Markdown component should render link type strings as links 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a href=\\"https://github.com\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">https://github.com</a></p>"`;

exports[`Markdown component should render markdown blockquotes 1`] = `
"<blockquote>
<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">Lorem ipsum dolor sit amet</p>
</blockquote>"
`;

exports[`Markdown component should render markdown bold using ** 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><strong>Foobar</strong></p>"`;

exports[`Markdown component should render markdown bold using __ 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><strong>Foobar</strong></p>"`;

exports[`Markdown component should render markdown code blocks 1`] = `
"<pre><code>const foo = () =&gt; {
  return &apos;bar&apos;
}
</code></pre>"
`;

exports[`Markdown component should render markdown code blocks with language specified 1`] = `
"<pre class=\\"language-javascript\\"><code class=\\"language-javascript\\"><span class=\\"token keyword\\">const</span> <span class=\\"token function-variable function\\">foo</span> <span class=\\"token operator\\">=</span> <span class=\\"token punctuation\\">(</span><span class=\\"token punctuation\\">)</span> <span class=\\"token arrow operator\\">=&gt;</span> <span class=\\"token punctuation\\">{</span>
  <span class=\\"token keyword control-flow\\">return</span> <span class=\\"token string\\">&apos;bar&apos;</span>
<span class=\\"token punctuation\\">}</span>
</code></pre>"
`;

exports[`Markdown component should render markdown h1 headers 1`] = `"<h1 class=\\"sc-jcVebW fraIRR sc-iUuytg gQgcGC\\">Foobar</h1>"`;

exports[`Markdown component should render markdown h2 headers 1`] = `"<h2 class=\\"sc-jcVebW fraIRR sc-iBaPrD iFoFUX\\">Foobar</h2>"`;

exports[`Markdown component should render markdown h3 headers 1`] = `"<h3 class=\\"sc-jcVebW fraIRR sc-eggNIi jTuFyV\\">Foobar</h3>"`;

exports[`Markdown component should render markdown h4 headers 1`] = `"<h4 class=\\"sc-jcVebW jPGlzQ sc-cTkwdZ jLyhgM\\">Foobar</h4>"`;

exports[`Markdown component should render markdown h4 headers 2`] = `"<h4 class=\\"sc-jcVebW jPGlzQ sc-cTkwdZ jLyhgM\\">Foobar</h4>"`;

exports[`Markdown component should render markdown h5 headers 1`] = `"<h5 class=\\"sc-jcVebW jPGlzQ sc-jNMdTA exRdKT\\">Foobar</h5>"`;

exports[`Markdown component should render markdown h5 headers 2`] = `"<h6 class=\\"sc-jcVebW jPGlzQ sc-dOSReg hkvgvB\\">Foobar</h6>"`;

exports[`Markdown component should render markdown images 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><img src=\\"https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png\\" alt=\\"GitHub logo\\"></p>"`;

exports[`Markdown component should render markdown inline code 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><code>Lorem ipsum dolor sit amet</code></p>"`;

exports[`Markdown component should render markdown italics using * 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><em>Foobar</em></p>"`;

exports[`Markdown component should render markdown italics using _ 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><em>Foobar</em></p>"`;

exports[`Markdown component should render markdown links 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a href=\\"https://github.com\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">GitHub</a></p>"`;

exports[`Markdown component should render markdown ordered lists 1`] = `
"<ol>
<li>Item 1</li>
<li>Item 2</li>
<li>Item 2a</li>
<li>Item 2b</li>
</ol>"
`;

exports[`Markdown component should render markdown strikethroughs 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><del>foobar</del></p>"`;

exports[`Markdown component should render markdown tables 1`] = `"<table><thead><tr><th>First</th><th>Second</th></tr></thead><tbody><tr><td>1</td><td>2</td></tr><tr><td>3</td><td>4</td></tr></tbody></table>"`;

exports[`Markdown component should render markdown task lists 1`] = `
"<ul class=\\"contains-task-list\\">
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" disabled checked> task 1</li>
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" disabled checked> task 2</li>
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" disabled> task 3</li>
</ul>"
`;

exports[`Markdown component should render markdown unordered lists 1`] = `
"<ul>
<li>Item 1</li>
<li>Item 2
<ul>
<li>Item 2a</li>
<li>Item 2b</li>
</ul>
</li>
</ul>"
`;

exports[`Markdown component xss: 1 1`] = `""`;

exports[`Markdown component xss: 2 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;script&gt;alert(&apos;123&apos;);&lt;/script&gt;</p>"`;

exports[`Markdown component xss: 3 1`] = `"<img src=\\"x\\">"`;

exports[`Markdown component xss: 4 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p>"`;

exports[`Markdown component xss: 5 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;&gt;</p>"`;

exports[`Markdown component xss: 6 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;&gt;</p>"`;

exports[`Markdown component xss: 7 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&apos;&gt;</p>"`;

exports[`Markdown component xss: 8 1`] = `
"<blockquote>

</blockquote>"
`;

exports[`Markdown component xss: 9 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p>"`;

exports[`Markdown component xss: 10 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt; / script &gt;&lt; script &gt;alert(123)&lt; / script &gt;</p>"`;

exports[`Markdown component xss: 11 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"> onfocus=JaVaSCript:alert(123) autofocus</p>"`;

exports[`Markdown component xss: 12 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot; onfocus=JaVaSCript:alert(123) autofocus</p>"`;

exports[`Markdown component xss: 13 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&apos; onfocus=JaVaSCript:alert(123) autofocus</p>"`;

exports[`Markdown component xss: 14 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&#xFF1C;script&#xFF1E;alert(123)&#xFF1C;/script&#xFF1E;</p>"`;

exports[`Markdown component xss: 15 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;script&gt;</p>"`;

exports[`Markdown component xss: 16 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">--&gt;</p>"`;

exports[`Markdown component xss: 17 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;;alert(123);t=&quot;</p>"`;

exports[`Markdown component xss: 18 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&apos;;alert(123);t=&apos;</p>"`;

exports[`Markdown component xss: 19 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">JavaSCript:alert(123)</p>"`;

exports[`Markdown component xss: 20 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">;alert(123);</p>"`;

exports[`Markdown component xss: 21 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">src=JaVaSCript:prompt(132)</p>"`;

exports[`Markdown component xss: 22 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;&gt;</p>"`;

exports[`Markdown component xss: 23 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&apos;&gt;</p>"`;

exports[`Markdown component xss: 24 1`] = `
"<blockquote>
</blockquote>"
`;

exports[`Markdown component xss: 25 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot; autofocus onkeyup=&quot;javascript:alert(123)</p>"`;

exports[`Markdown component xss: 26 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&apos; autofocus onkeyup=&apos;javascript:alert(123)</p>"`;

exports[`Markdown component xss: 27 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;script\\\\x20type=&quot;text/javascript&quot;&gt;javascript:alert(1);</p>"`;

exports[`Markdown component xss: 28 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;script\\\\x3Etype=&quot;text/javascript&quot;&gt;javascript:alert(1);</p>"`;

exports[`Markdown component xss: 29 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;script\\\\x0Dtype=&quot;text/javascript&quot;&gt;javascript:alert(1);</p>"`;

exports[`Markdown component xss: 30 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;script\\\\x09type=&quot;text/javascript&quot;&gt;javascript:alert(1);</p>"`;

exports[`Markdown component xss: 31 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;script\\\\x0Ctype=&quot;text/javascript&quot;&gt;javascript:alert(1);</p>"`;

exports[`Markdown component xss: 32 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;script\\\\x2Ftype=&quot;text/javascript&quot;&gt;javascript:alert(1);</p>"`;

exports[`Markdown component xss: 33 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;script\\\\x0Atype=&quot;text/javascript&quot;&gt;javascript:alert(1);</p>"`;

exports[`Markdown component xss: 34 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&apos;\`&quot;&gt;&lt;\\\\x3Cscript&gt;javascript:alert(1)</p>"`;

exports[`Markdown component xss: 35 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&apos;\`&quot;&gt;&lt;\\\\x00script&gt;javascript:alert(1)</p>"`;

exports[`Markdown component xss: 36 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 37 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 38 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 39 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 40 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 41 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 42 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 43 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 44 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 45 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 46 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 47 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 48 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 49 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 50 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 51 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 52 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 53 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 54 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 55 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 56 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 57 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 58 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 59 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 60 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 61 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 62 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">ABC</p><div>DEF<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p></div>"`;

exports[`Markdown component xss: 63 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 64 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 65 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 66 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 67 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 68 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 69 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 70 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 71 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 72 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 73 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 74 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 75 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 76 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 77 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 78 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 79 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 80 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 81 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 82 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 83 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 84 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 85 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 86 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 87 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 88 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 89 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 90 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 91 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 92 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 93 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 94 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 95 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 96 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 97 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 98 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 99 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 100 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 101 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 102 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 103 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 104 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 105 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 106 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 107 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 108 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 109 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 110 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 111 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 112 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 113 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 114 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 115 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 116 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 117 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 118 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 119 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a id=\\"user-content-fuzzelement1\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">test</a></p>"`;

exports[`Markdown component xss: 120 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">\`&quot;&apos;&gt;&lt;img src=xxx:x \\\\x0Aonerror=javascript:alert(1)&gt;</p>"`;

exports[`Markdown component xss: 121 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">\`&quot;&apos;&gt;&lt;img src=xxx:x \\\\x22onerror=javascript:alert(1)&gt;</p>"`;

exports[`Markdown component xss: 122 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">\`&quot;&apos;&gt;&lt;img src=xxx:x \\\\x0Bonerror=javascript:alert(1)&gt;</p>"`;

exports[`Markdown component xss: 123 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">\`&quot;&apos;&gt;&lt;img src=xxx:x \\\\x0Donerror=javascript:alert(1)&gt;</p>"`;

exports[`Markdown component xss: 124 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">\`&quot;&apos;&gt;&lt;img src=xxx:x \\\\x2Fonerror=javascript:alert(1)&gt;</p>"`;

exports[`Markdown component xss: 125 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">\`&quot;&apos;&gt;&lt;img src=xxx:x \\\\x09onerror=javascript:alert(1)&gt;</p>"`;

exports[`Markdown component xss: 126 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">\`&quot;&apos;&gt;&lt;img src=xxx:x \\\\x0Conerror=javascript:alert(1)&gt;</p>"`;

exports[`Markdown component xss: 127 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">\`&quot;&apos;&gt;&lt;img src=xxx:x \\\\x00onerror=javascript:alert(1)&gt;</p>"`;

exports[`Markdown component xss: 128 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">\`&quot;&apos;&gt;&lt;img src=xxx:x \\\\x27onerror=javascript:alert(1)&gt;</p>"`;

exports[`Markdown component xss: 129 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">\`&quot;&apos;&gt;&lt;img src=xxx:x \\\\x20onerror=javascript:alert(1)&gt;</p>"`;

exports[`Markdown component xss: 130 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 131 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 132 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 133 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 134 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 135 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 136 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 137 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 138 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 139 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 140 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 141 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 142 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 143 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 144 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 145 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 146 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 147 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 148 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 149 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 150 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 151 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 152 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 153 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 154 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 155 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 156 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 157 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 158 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 159 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 160 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 161 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 162 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 163 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 164 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 165 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 166 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&quot;\`&apos;&gt;</p>"`;

exports[`Markdown component xss: 167 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img \\\\x00src=x onerror=&quot;alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 168 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img \\\\x47src=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 169 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img \\\\x11src=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 170 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img \\\\x12src=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 171 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img\\\\x47src=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 172 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img\\\\x10src=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 173 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img\\\\x13src=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 174 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img\\\\x32src=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 175 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img\\\\x47src=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 176 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img\\\\x11src=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 177 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img \\\\x47src=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 178 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img \\\\x34src=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 179 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img \\\\x39src=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 180 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img \\\\x00src=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 181 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src\\\\x09=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 182 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src\\\\x10=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 183 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src\\\\x13=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 184 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src\\\\x32=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 185 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src\\\\x12=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 186 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src\\\\x11=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 187 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src\\\\x00=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 188 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src\\\\x47=x onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 189 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src=x\\\\x09onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 190 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src=x\\\\x10onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 191 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src=x\\\\x11onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 192 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src=x\\\\x12onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 193 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src=x\\\\x13onerror=&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 194 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img[a][b][c]src[d]=x[e]onerror=[f]&quot;alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 195 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src=x onerror=\\\\x09&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 196 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src=x onerror=\\\\x10&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 197 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src=x onerror=\\\\x11&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 198 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src=x onerror=\\\\x12&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 199 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src=x onerror=\\\\x32&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 200 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src=x onerror=\\\\x00&quot;javascript:alert(1)&quot;&gt;</p>"`;

exports[`Markdown component xss: 201 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">XXX</a></p>"`;

exports[`Markdown component xss: 202 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src=&quot;x<code> </code>&quot;<code> </code>&gt;</p>"`;

exports[`Markdown component xss: 203 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;img src onerror /&quot; &apos;&quot;= alt=javascript:alert(1)//&quot;&gt;</p>"`;

exports[`Markdown component xss: 204 1`] = `""`;

exports[`Markdown component xss: 205 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;a href=<a href=\\"http://foo.bar/#x=%60y%3E\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">http://foo.bar/#x=\`y&gt;</a><img alt=\\"\`&gt;&lt;img src=x:x onerror=javascript:alert(1)&gt;&lt;/a&gt;\\"></p>"`;

exports[`Markdown component xss: 206 1`] = `""`;

exports[`Markdown component xss: 207 1`] = `""`;

exports[`Markdown component xss: 208 1`] = `""`;

exports[`Markdown component xss: 209 1`] = `""`;

exports[`Markdown component xss: 210 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;IMG &quot;&quot;&quot;&gt;&quot;&gt;</p>"`;

exports[`Markdown component xss: 211 1`] = `"<img>"`;

exports[`Markdown component xss: 212 1`] = `"<img src=\\"#\\">"`;

exports[`Markdown component xss: 213 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;IMG SRC= onmouseover=&quot;alert(&apos;xxs&apos;)&quot;&gt;</p>"`;

exports[`Markdown component xss: 214 1`] = `"<img>"`;

exports[`Markdown component xss: 215 1`] = `"<img>"`;

exports[`Markdown component xss: 216 1`] = `"<img>"`;

exports[`Markdown component xss: 217 1`] = `"<img>"`;

exports[`Markdown component xss: 218 1`] = `"<img>"`;

exports[`Markdown component xss: 219 1`] = `"<img>"`;

exports[`Markdown component xss: 220 1`] = `"<img>"`;

exports[`Markdown component xss: 221 1`] = `"<img>"`;

exports[`Markdown component xss: 222 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">perl -e &apos;print &quot;&lt;IMG SRC=java\\\\0script:alert(\\\\&quot;XSS\\\\&quot;)&gt;&quot;;&apos; &gt; out</p>"`;

exports[`Markdown component xss: 223 1`] = `"<img>"`;

exports[`Markdown component xss: 224 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;SCRIPT/XSS SRC=&quot;<a href=\\"http://ha.ckers.org/xss.js%22%3E\\" color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">http://ha.ckers.org/xss.js&quot;&gt;</a></p>"`;

exports[`Markdown component xss: 225 1`] = `""`;

exports[`Markdown component xss: 226 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><a color=\\"primary.main\\" class=\\"sc-eGCarw kBARfK sc-ctaXAZ bvFpzE\\">SCRIPT/SRC=&quot;http://ha.ckers.org/xss.js&quot;</a></p>"`;

exports[`Markdown component xss: 227 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;</p>"`;

exports[`Markdown component xss: 228 1`] = `""`;

exports[`Markdown component xss: 229 1`] = `""`;

exports[`Markdown component xss: 230 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">&lt;IMG SRC=&quot;javascript:alert(&apos;XSS&apos;)&quot;</p>"`;

exports[`Markdown component xss: 231 1`] = `""`;

exports[`Markdown component xss: 232 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">\\\\&quot;;alert(&apos;XSS&apos;);//</p>"`;

exports[`Markdown component xss: 233 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"> Copy me</p>"`;

exports[`Markdown component xss: 234 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"><i> Scroll over me </i></p>"`;

exports[`Markdown component xss: 235 1`] = `""`;

exports[`Markdown component xss: 236 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\">http://a/%%30%30</p>"`;

exports[`Markdown component xss: 237 1`] = `"<p class=\\"sc-fKFyDc dToKui sc-cxFLnm kkkmRH\\"></p>"`;
